# ai-factory-network-twin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLANNING.md  README.md  justfile  orca.yaml  pyproject.toml
.github/workflows/: check.yml  e2e.yml
config/: containerlab-graph.html  platform-map-srlinux.yaml  platform-map.yaml
config/policies/: mini-dual-plane-srlinux.yaml  mini-dual-plane.yaml  smoke.yaml
deploy/endpoint/: Dockerfile
deploy/netbox/: README.md  docker-compose.yml
docs/: DIGITAL_TWIN_ARCHITECTURE.md  GOAL.md  RESEARCH.md  policy-rules.md
docs/adr/: 006-netbox-asn-assignment.md  007-policy-profiles-and-address-intent.md  008-containerlab-platform-and-rendering.md  009-runtime-verification-boundary.md  010-reversible-failure-scenarios.md
docs/papers/: netbox-nrx-containerlab-digital-twin.md  scaleacross-geo-distributed-ai-training.md
fixtures/: mini-dual-plane-srlinux.yaml  mini-dual-plane.yaml  smoke.yaml
scenarios/: link-failure.yaml  spine-failure.yaml
scripts/: demo.sh  worktree-setup.sh
src/aftwin/: __init__.py  __main__.py  cli.py  errors.py  settings.py
tests/contract/: test_adapter.py  test_fetch.py
tests/integration/: test_batfish.py  test_containerlab.py  test_netbox.py  test_srlinux.py
tests/unit/: conftest.py  test_assure.py  test_backend_registry.py  test_backend_srlinux.py  test_cli.py  test_compiler.py  test_errors.py  test_expected_state.py  test_findings.py  test_fixture.py  test_fixture_domain.py  test_graph.py  test_manifest.py  test_mini_fixture.py  test_policy_engine.py  test_policy_profile.py  (+14 more)
(+89 files in other folders)
